@@ -7,6 +7,9 @@ bzr-0.0.5  NOT RELEASED YET
 
     * New 'bzr ignore PATTERN' command.
 
+    * Nicer error message for broken pipe and similar conditions that
+      don't indicate an internal error.
+
   TESTING:
 
     * Converted black-box test suites from Bourne shell into Python.
